<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100.0">

        <EditText
            android:id="@+id/station_edit"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="75.0"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:minWidth="160.0sp"/>

        <Button
            android:id="@+id/station_register"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="25.0"
            android:text="@string/label_register"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_empty"
        android:textSize="22.0sp"/>
</LinearLayout>